--- a/ChartLogs/Views/Home/Index.cshtml
+++ b/ChartLogs/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>*@
 </div>
 
-<div id="divChart">
-
+<div id="divChart" style="width: 700px; height: 300px;">
+    a
 </div>
 <div class="row">
     <div class="col-md-4">
